ec2.tf

# data "aws_ami" "ami" {
#   most_recent = true
#   owners      = ["amazon"]

#   filter {
#     name   = "name"
#     values = ["amzn2-ami-kernel-5.10-hvm-*-gp2"]
#   }
# }

# data "aws_key_pair" "keypair" {
#   key_name = "kojitechs"

# }

# resource "aws_security_group" "allow_ssh" {
#   name        = "allow_ssh"
#   description = "Allow SSH inbound traffic"
#   vpc_id      = local.vpc_id

#   ingress {
#     description = "ssh from VPC"
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = ["68.147.10.100/32"]

#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]

#   }

#   tags = {
#     Name = "allow_ssh"
#   }
# }

# resource "aws_instance" "web" {
#   ami           = data.aws_ami.ami.id
#   instance_type = "t2.micro"
#   subnet_id     = aws_subnet.pub_subnet[0].id

#   tags = {
#     Name = "Terraform"
#   }
#   key_name = data.aws_key_pair.keypair.key_name

#   vpc_security_group_ids = [aws_security_group.allow_ssh.id]
# }
